test/tests/errors/error-var-non-storeable.sm
// true
// false
// false
/**/
/**/

program {
    proc a() {}
    var x: proc() = a;
}